release v8.2.0